--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ tr:nth-child(even) {
 }
 
 tr {
-  height: 25px;
+  height: 10vh;
 }
 
 .red {
@@ -158,6 +158,7 @@ td {
 table {
   border-collapse: collapse;
   width: 100%;
+  height: 65vh;
 }
 
 .sparklineGraph {
