--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@ th {
 .clock {
   color: #c5c6c7;
   font-size: 25vh;
+  text-align: center;
 }
 
 /*Coin Table*/
@@ -158,7 +159,7 @@ td {
 table {
   border-collapse: collapse;
   width: 100%;
-  height: 65vh;
+  height: 63vh;
 }
 
 .sparklineGraph {
