--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ th {
 
 .clock {
   color: #c5c6c7;
-  font-size: 25vh;
+  font-size: 22vh;
   text-align: center;
 }
 
@@ -99,6 +99,7 @@ th {
 .coin-img {
   height: 30px;
   width: 30px;
+  padding-left: 20px;
 }
 
 tr:nth-child(even) {
