--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ th {
   color: #c5c6c7;
   font-size: 18vh;
   text-align: center;
+  padding-top: 1vh;
   font-family: "Titillium Web", sans-serif;
 }
 
